fixed bug where collapsed margin didin't use the tallest element to calculate height

--- a/dev/styles/base.scss
+++ b/dev/styles/base.scss
@@ -13,3 +13,11 @@ h6 {
   @apply .font-sans;
   @apply .mb-8;
 }
+
+p{
+  margin-bottom: 1em;
+}
+
+hr{
+  border:1px solid black;
+}
